# Real-Time-Data-Processing-with-Confluent-Kafka-SQL-and-Avro

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  logger.py
kafka_consumer/: data_transform.py  json_writer.py  kafka_consumer.py
kafka_producer/: confluentKafka_avro_schema.avsc  kafka_producer.py  mssql_connector.py
kafka_producer/checkpoints/: last_fetched.txt
sqlScripts/: create_table.py  create_table.sql  insert_sample.py  sqlConnectionTest.py
