[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-kafka-pipeline"
version = "0.1.0"
dependencies = [
    "pyodbc==5.2.0",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "Faker==37.5.3",
    "confluent-kafka==2.11.0",
    "fastavro==1.11.1",
    "tzdata==2025.2",
    "realtime-kafka-pipeline @ git+https://github.com/Manish-Kumar-Rai/Real-Time-Data-Processing-with-Confluent-Kafka-SQL-and-Avro.git@b2ea7c058f5d6a10026311fe7eb17979e4fcb969"
]

[tool.setuptools.packages.find]
include = ["kafka_producer", "sqlScripts"]
